Atualizando e reordenando os projetos na página portfólio em inglês

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,18 +40,6 @@
 
 
                     <div class="car">
-                        <h3 class="project1">Inventory and Stock App</h3>
-                        <img class="portImg" src="" alt="">
-                        <p>IN DEVELOPMENT: An app using JavaScript and SQL to manage the stock and inventory for the CTI
-                            at the Secretaria do Desenvolvimento do Estado de São Paulo, a governmental bureau where I
-                            work. The app will operate on a private IP, allowing access only to authorized users. It
-                            features a login area and can manage items (CRUD), as well as generate and print reports and
-                            official letters for equipment transfers.</p>
-                        <p>Code at GitHub: Still not available<a href=""></a></p>
-                    </div>
-
-
-                    <div class="car">
                         <h3 class="project1">Secretaria do Estado de São Paulo's Intranet</h3>
                         <img class="portImg" src="./img/sde.webp" alt="a gif of a intranet site">
                         <p>Occasional Changes: During my work as a technician, I occasionally receive requests to modify
@@ -62,29 +50,11 @@
                     </div>
 
 
-
-                    <div class="car">
-                        <h3 class="project1">Clock and temperature</h3>
-                        <img class="portImg" src="./img/clock.gif" alt="the image of a clock app">
-                        <p>This app began as a personal project for my JavaScript studies and responsive CSS, starting
-                            with a simple clock. Then, I added a weather search feature and showed it to my sister. She
-                            liked it and requested an alarm feature with funny sounds and a voiceover A.I. I implemented
-                            the alarm, I have to make some CSS adjustments and I'm currently working on the voiceover A.I. Some friends became interested
-                            and asked to try the app as well. At the moment, 7 people are using it and waiting for the A.I. update.</p>
-                        <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/clock-n-temp">CLICK HERE</a>
-                        </p>
-                        <p>Test my work <a href="https://jazzocordeiro.github.io/clock-n-temp/">CLICK HERE</a></p>
-                    </div>
-
-
                     <div class="car">
                         <h3 class="project1">Landing pages</h3>
                         <img class="portImg" src="https://img.icons8.com/3d-fluency/375/wordpress.png" alt="wordpress">
-                        <p>I created and customized pre-existing templates to make landing pages for various products at
-                            the request of a Hotmart affiliate. In total, I designed around 15 different pages, but I
-                            was only able to find 2 of them saved on my computer.</p>
-                        <p>Check the <a href="">first link</a></p>
-                        <p>Check the <a href="">second link</a></p>
+                        <p>During the pandemics, I create and customized pre-existing templates to make landing pages for various products at
+                            the request of Hotmart affiliates.</p>
                     </div>
                     <!-- Buttons -->
                     <div class="arrow1">
@@ -107,25 +77,24 @@
         <div id="modal2">
             <!-- Second Carrossel -->
             <section class="carrossel2">
-                <div class="carro active2">
-                    <h3 class="project2">Soda lading page</h3>
-                    <img class="portImg" src="./img/refri.gif" alt="an orange page with a can of orange soda and pieces of fruits floating">
-                    <p>I made this simple landing page based on a youtube video while I was studying about CSS and
-                        animation. It is simple but nice looking. This is also where I learned to make a carousel of
-                        images</p>
-                    <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/refri">CLICK HERE</a></p>
-                    <p>Test my work <a href="https://jazzocordeiro.github.io/refri/">CLICKING HERE</a></p>
+         <div class="carro active2">
+                    <h3 class="project2">Be the Hero</h3>
+                    <img class="portImg" src="./img/hero.webp" alt="the image of a login screen followed by a list with cases">
+                    <p>"A website and app for an initiative where NGOs can post cases, and people can help resolve them by making donations and directly contacting the NGO.
+A MULTIPLATFORM FULLSTACK project built with REACT, REACT NATIVE, and NODEJS, using Express and Axios. Local database used only for testing purposes.
+WEB: Built for the NGOs;  A login screen followed by a page with registered cases, a button to open the case registration page, and a button to log out.
+MOBILE: Built for donor users; Where users can view the registered cases and send an email or WhatsApp message to get more information and help the NGO.</p>
+                    <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/omniStack">CLICK HERE</a></p>
                 </div>
 
 
-                <div class="carro">
-                    <h3 class="project2">Employees list</h3>
-                    <img class="portImg" src="./img/todo.gif" alt="a gif of a to-do list">
-                    <p>To improve my JavaScript skills, especially with CRUD operations, I built an employee list that
-                        stores names, salaries, and job titles in local storage. You can edit and delete all entries.
-                        The same structure could be adapted for a to-do list or a note-taking app.</p>
-                    <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/ListCRUD">CLICK HERE</a></p>
-                    <p>Test my work <a href="https://jazzocordeiro.github.io/ListCRUD/">CLICKING HERE</a></p>
+         <div class="carro">
+                    <h3 class="project2">Store Inventory</h3>
+                    <img class="portImg" src="./img/loja.webp" alt="website where you can add new clothes as products and see the list underneat it">
+                    <p>A website that functions as an inventory for a clothing store.
+A FULLSTACK WEB project built with REACT, NODEJS, BOOTSTRAP, using Express, MySQL, and Express-Handlebars.
+It is a page where you can register a product, view the product, update information, delete it, or mark a single item that was for sale as sold.</p>
+                    <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/Estoque-Loja">CLICK HERE</a></p>
                 </div>
 
 
@@ -141,6 +110,31 @@
 
 
                 <div class="carro">
+                    <h3 class="project2">Employees list</h3>
+                    <img class="portImg" src="./img/todo.gif" alt="a gif of a to-do list">
+                    <p>To improve my JavaScript skills, especially with CRUD operations, I built an employee list that
+                        stores names, salaries, and job titles in local storage. You can edit and delete all entries.
+                        The same structure could be adapted for a to-do list or a note-taking app.</p>
+                    <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/ListCRUD">CLICK HERE</a></p>
+                    <p>Test my work <a href="https://jazzocordeiro.github.io/ListCRUD/">CLICKING HERE</a></p>
+                </div>
+
+
+                    <div class="carro">
+                        <h3 class="project2">Clock and temperature</h3>
+                        <img class="portImg" src="./img/clock.gif" alt="the image of a clock app">
+                        <p>This app began as a personal project for my JavaScript studies and responsive CSS, starting
+                            with a simple clock. Then, I added a weather search feature and showed it to my sister. She
+                            liked it and requested an alarm feature with funny sounds and a voiceover A.I. I implemented
+                            the alarm, I have to make some CSS adjustments and I'm currently working on the voiceover A.I. Some friends became interested
+                            and asked to try the app as well. At the moment, 7 people are using it and waiting for the A.I. update.</p>
+                        <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/clock-n-temp">CLICK HERE</a>
+                        </p>
+                        <p>Test my work <a href="https://jazzocordeiro.github.io/clock-n-temp/">CLICK HERE</a></p>
+                    </div>
+
+
+                <div class="carro">
                     <h3 class="project2">Coffeeshop landing page</h3>
                     <img class="portImg" src="./img/cafe.webp" alt="a gif of a coffee shop website scrolling down">
                     <p>I made this simple landing page based on a youtube video while I was studying about CSS and
@@ -148,6 +142,19 @@
                     <p>Code at GitHub:<a href="https://github.com/JazzoCordeiro/coffeeshop">CLICK HERE</a></p>
                     <p>Test my work <a href="https://jazzocordeiro.github.io/coffeeshop/">CLICKING HERE</a></p>
                 </div>
+
+
+          <div class="carro">
+                    <h3 class="project2">Soda lading page</h3>
+                    <img class="portImg" src="./img/refri.gif" alt="an orange page with a can of orange soda and pieces of fruits floating">
+                    <p>I made this simple landing page based on a youtube video while I was studying about CSS and
+                        animation. It is simple but nice looking. This is also where I learned to make a carousel of
+                        images</p>
+                    <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/refri">CLICK HERE</a></p>
+                    <p>Test my work <a href="https://jazzocordeiro.github.io/refri/">CLICKING HERE</a></p>
+                </div>
+
+
                 <!-- Buttons -->
                 <div class="arrow2">
                     <button id="prev2"> &lt; </button>
