Atualizando e reordenando os projetos na página portfólio em português

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,9 @@
                     <div class="car">
                         <h3 class="project1">Secretaria do Estado de São Paulo's Intranet</h3>
                         <img class="portImg" src="./img/sde.webp" alt="a gif of a intranet site">
-                        <p>Occasional Changes: During my work as a technician, I occasionally receive requests to modify
+                        <p>Occasional changes on the HTML, PHP and CSS code: During my work as a technician, I occasionally receive requests to modify
                             appearance details. These tasks include changing specific images, adding or removing icons,
-                            adjusting CSS after changes made by others, and similar responsibilities. Essentially, I
-                            occasionally work on some HTML and CSS adjustments.</p>
+                            adjusting CSS after changes made by others, and similar responsibilities.</p><br>
                         <p>No link to code and no access to this tool is allowed due to confidentiality.</p>
                     </div>
 
@@ -80,9 +79,9 @@
          <div class="carro active2">
                     <h3 class="project2">Be the Hero</h3>
                     <img class="portImg" src="./img/hero.webp" alt="the image of a login screen followed by a list with cases">
-                    <p>"A website and app for an initiative where NGOs can post cases, and people can help resolve them by making donations and directly contacting the NGO.
-A MULTIPLATFORM FULLSTACK project built with REACT, REACT NATIVE, and NODEJS, using Express and Axios. Local database used only for testing purposes.
-WEB: Built for the NGOs;  A login screen followed by a page with registered cases, a button to open the case registration page, and a button to log out.
+                    <p>A website and app NGOs can post cases, and people can help.<br>
+A multiplataform fullstack project built with REACT, REACT NATIVE, and NODEJS, using Express and Axios. Local database used only for testing purposes.<br>
+WEB: Built for the NGOs;  A login screen followed by a page with registered cases, a button to open the case registration page, and a button to log out.<br>
 MOBILE: Built for donor users; Where users can view the registered cases and send an email or WhatsApp message to get more information and help the NGO.</p>
                     <p>Code at GitHub: <a href="https://github.com/JazzoCordeiro/omniStack">CLICK HERE</a></p>
                 </div>
