--- a/pt-br/portfoliopt.html
+++ b/pt-br/portfoliopt.html
@@ -35,39 +35,21 @@
 
 
                     <div class="car">
-                        <h3 class="project1">App de Inventário e Estoque</h3>
-                        <img class="portImg" src="" alt="">
-                        <p>EM DESENVOLVIMENTO: Um aplicativo utilizando JavaScript e SQL para gerenciar o estoque e inventário do CTI da Secretaria de Desenvolvimento do Estado de São Paulo, um órgão governamental onde trabalho. O aplicativo funcionará em um IP privado, permitindo o acesso apenas a usuários autorizados. Ele possui uma área de login e pode gerenciar itens (CRUD), além de gerar e imprimir relatórios e cartas oficiais para transferências de equipamentos.</p>
-                        <p>Código no GitHub: Ainda não disponível<a href=""></a></p>
-                    </div>
-
-
-                    <div class="car">
                         <h3 class="project1">Intranet da Secretaria do Estado de São Paulo</h3>
                         <img class="portImg" src="../img/sde.webp" alt="uma gif de um site de intranet">
-                        <p>Alterações Ocasionalmente: Durante meu trabalho como técnico, ocasionalmente recebo solicitações para modificar detalhes de aparência. Essas tarefas incluem trocar imagens específicas, adicionar ou remover ícones, ajustar CSS após alterações feitas por outros e responsabilidades semelhantes. Essencialmente, ocasionalmente trabalho em alguns ajustes de HTML e CSS.</p>
+                        <p>Alterações ocasionalmente feitas na página em HTML, PHP e CSS: Durante meu trabalho como técnico, ocasionalmente recebia 
+                            solicitações para modificar detalhes de aparência. Essas tarefas incluem trocar imagens específicas, adicionar 
+                            ou remover ícones e responsabilidades semelhantes. Essencialmente, ocasionalmente trabalho em alguns ajustes de HTML, PHP e CSS.</p><br>
                         <p>Não há link para o código e o acesso a essa ferramenta não é permitido devido a confidencialidade.</p>
-                    </div>
-
-
-
-                    <div class="car">
-                        <h3 class="project1">Relógio e temperatura</h3>
-                        <img class="portImg" src="../img/clock.gif" alt="imagem de um app de relógio">
-                        <p>Este app começou como um projeto pessoal para meus estudos de JavaScript e CSS responsivo, começando com um relógio simples. Depois, adicionei uma funcionalidade de pesquisa de clima e mostrei para minha irmã. Ela gostou e pediu uma função de alarme com sons engraçados e uma IA para locução. Implementei o alarme, preciso fazer alguns ajustes de CSS e estou trabalhando na IA de locução. Alguns amigos ficaram interessados e pediram para testar o app também. No momento, 7 pessoas estão usando e aguardando pela atualização da IA.</p>
-                        <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/clock-n-temp">CLIQUE AQUI</a>
-                        </p>
-                        <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/clock-n-temp/">CLIQUE AQUI</a></p>
                     </div>
 
 
                     <div class="car">
                         <h3 class="project1">Landing pages</h3>
                         <img class="portImg" src="https://img.icons8.com/3d-fluency/375/wordpress.png" alt="wordpress">
-                        <p>Criamos e personalizamos templates pré-existentes para fazer landing pages para diversos produtos a pedido de um afiliado da Hotmart. No total, criei cerca de 15 páginas diferentes, mas só consegui encontrar 2 delas salvas no meu computador.</p>
-                        <p>Veja o <a href="">primeiro link</a></p>
-                        <p>Veja o <a href="">segundo link</a></p>
+                        <p>Durante a pandemia, eu criei e customizei templates preexistentes para fazer landing pages de diversos produtos a pedido de afiliados da Hotmart.</p>
                     </div>
+
                     <!-- Botões -->
                     <div class="arrow1">
                         <button id="prev1"> &lt; </button>
@@ -90,11 +72,32 @@
             <!-- Segundo Carrossel -->
             <section class="carrossel2">
                 <div class="carro active2">
-                    <h3 class="project2">Landing page de refrigerante</h3>
-                    <img class="portImg" src="../img/refri.gif" alt="uma página laranja com uma lata de refrigerante e pedaços de frutas flutuando">
-                    <p>Eu fiz esta landing page simples com base em um vídeo do youtube enquanto estudava sobre CSS e animação. É simples, mas bonita. Foi também onde aprendi a fazer um carrossel de imagens.</p>
-                    <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/refri">CLIQUE AQUI</a></p>
-                    <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/refri/">CLIQUE AQUI</a></p>
+                    <h3 class="project2">Be the Hero</h3>
+                    <img class="portImg" src="../img/hero.webp" alt="Uma tela de login que leva a um site com casos que podem ser escolhidos">
+                    <p>Site e app de uma iniciativa onde ONGs podem postar casos e pessoas podem ajudar.<br>
+Projeto fullstack multiplataforma feito com REACT, REACT NATIVE e NODEJS, utilizando express e axios. Banco de dados local apenas para testes.<br>
+WEB: Feita para as ONGS - Tela de login seguida de tela com os casos ja cadastrados, botão para abrir a tela de cadastro de novo caso e botão para deslogar.<br>
+MOBILE: Feito para usuários doadores - onde o usuário pode ver os casos cadastrados e enviar email ou mensagem de whatsapp para ter mais informações e ajudar a ONG.</p>
+                    <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/omniStack">CLIQUE AQUI</a></p>
+                </div>
+
+
+                         <div class="carro">
+                    <h3 class="project2">Estoque de loja de roupa</h3>
+                    <img class="portImg" src="../img/loja.webp" alt="Um campo para cadastrar produtos e uma lista com os produtos.">
+                    <p>Site que funciona como estoque de loja de roupas.
+Projeto fullstack WEB feito com REACT, NODEJS, BOOTSTRAP, utilizando express, mySQL, express-handlebars.
+Trata-se de uma tela onde é possível cadastrar um produto, é possível ver o produto, alterar informações, deleta-lo ou dar baixa em apenas um item que estava a venda.</p>
+                    <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/Estoque-Loja">CLOQUE AQUI:</a></p>
+                </div>
+
+
+                   <div class="carro">
+                    <h3 class="project2">Pokédex</h3>
+                    <img class="portImg" src="../img/pokedex.gif" alt="imagem de uma pokédex mostrando um bulbasaur">
+                    <p>Todo iniciante hoje em dia cria uma Pokédex enquanto aprende JavaScript, especialmente para praticar requisições de API e operações CRUD. Foi meu primeiro projeto enquanto estudava no Bootcamp Front End do Pan Bank.</p>
+                    <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/pokedex">CLIQUE AQUI</a></p>
+                    <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/pokedex/">CLIQUE AQUI</a></p>
                 </div>
 
 
@@ -107,13 +110,14 @@
                 </div>
 
 
-                <div class="carro">
-                    <h3 class="project2">Pokédex</h3>
-                    <img class="portImg" src="../img/pokedex.gif" alt="imagem de uma pokédex mostrando um bulbasaur">
-                    <p>Todo iniciante hoje em dia cria uma Pokédex enquanto aprende JavaScript, especialmente para praticar requisições de API e operações CRUD. Foi meu primeiro projeto enquanto estudava no Bootcamp Front End do Pan Bank.</p>
-                    <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/pokedex">CLIQUE AQUI</a></p>
-                    <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/pokedex/">CLIQUE AQUI</a></p>
-                </div>
+                                    <div class="carro">
+                        <h3 class="project2">Relógio e temperatura</h3>
+                        <img class="portImg" src="../img/clock.gif" alt="imagem de um app de relógio">
+                        <p>Este app começou como um projeto pessoal para meus estudos de JavaScript e CSS responsivo, começando com um relógio simples. Depois, adicionei uma funcionalidade de pesquisa de clima e mostrei para minha irmã. Ela gostou e pediu uma função de alarme com sons engraçados e uma IA para locução. Implementei o alarme, preciso fazer alguns ajustes de CSS e estou trabalhando na IA de locução. Alguns amigos ficaram interessados e pediram para testar o app também. No momento, 7 pessoas estão usando e aguardando pela atualização da IA.</p>
+                        <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/clock-n-temp">CLIQUE AQUI</a>
+                        </p>
+                        <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/clock-n-temp/">CLIQUE AQUI</a></p>
+                    </div>
 
 
                 <div class="carro">
@@ -123,6 +127,17 @@
                     <p>Código no GitHub:<a href="https://github.com/JazzoCordeiro/coffeeshop">CLIQUE AQUI</a></p>
                     <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/coffeeshop/">CLIQUE AQUI</a></p>
                 </div>
+
+
+                <div class="carro">
+                    <h3 class="project2">Landing page de refrigerante</h3>
+                    <img class="portImg" src="../img/refri.gif" alt="uma página laranja com uma lata de refrigerante e pedaços de frutas flutuando">
+                    <p>Eu fiz esta landing page simples com base em um vídeo do youtube enquanto estudava sobre CSS e animação. É simples, mas bonita. Foi também onde aprendi a fazer um carrossel de imagens.</p>
+                    <p>Código no GitHub: <a href="https://github.com/JazzoCordeiro/refri">CLIQUE AQUI</a></p>
+                    <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/refri/">CLIQUE AQUI</a></p>
+                </div>
+
+
                 <!-- Botões -->
                 <div class="arrow2">
                     <button id="prev2"> &lt; </button>
